# ferromagnetic

./: Cargo.toml  LICENSE  README.md
coeffs/: README.md  codgen.py
coeffs/shc/: igrf11coeffs.txt
src/: lib.rs
src/igrf/: coeffs.rs  math.rs  mod.rs
src/wmm/: mod.rs  wmm_2015.rs
testdata/wmm/: WMM2015_test_values.csv  wmm2015_testdata.json
tests/: igrf_integration_tests.rs
