[package]
name = "ferromagnetic"
description = "Calculate the world geomagnetic fields using IGRF/WMM"
version = "0.0.1-alpha.2"
edition = "2021"
license = "MIT"
authors = ["Håvard Sørbø <havard@hsorbo.no>"]
readme = "README.md"
repository = "https://github.com/hsorbo/ferromagnetic"

[dependencies]

[dev-dependencies]
float_eq = "1.0.1"